force-app/main/default/objects/TabelaEzeeConnect__c/TabelaEzeeConnect__c.object-meta.xml
<CustomObject>
    <label>Tabela Ezee Connect</label>
    <nameField>
        <displayFormat>EZ-{000000}</displayFormat>
        <label>Tabela</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tabelas Ezee Connect</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>