force-app/main/default/objects/TabelaEzeeConnect__c/fields/ConcessionariaEnergia__c.field-meta.xml
<CustomField>
    <fullName>ConcessionariaEnergia__c</fullName>
    <label>Concessionária de Energia</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Estado__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENERGISA ACRE - DISTRIBUIDORA DE ENERGIA S.A</fullName>
            </value>
            <value>
                <fullName>EQUATORIAL AL - EQUATORIAL ALAGOAS DISTRIBUIDORA DE ENERGIA S.A.</fullName>
            </value>
            <value>
                <fullName>AMAZONAS ENERGIA - AMAZONAS ENERGIA S.A</fullName>
            </value>
            <value>
                <fullName>CE AMAPÁ - COMPANHIA DE ELETRICIDADE DO AMAPÁ</fullName>
            </value>
            <value>
                <fullName>COELBA - COMPANHIA DE ELETRICIDADE DO ESTADO DA BAHIA</fullName>
            </value>
            <value>
                <fullName>NEOENERGIA BA - NEOENERGIA BA</fullName>
            </value>
            <value>
                <fullName>ENEL CE - COMPANHIA ENERGÉTICA DO CEARÁ</fullName>
            </value>
            <value>
                <fullName>CEBDIS - CEB DISTRIBUIÇÃO S.A.</fullName>
            </value>
            <value>
                <fullName>NEOENERGIA DF - NEOENERGIA DF</fullName>
            </value>
            <value>
                <fullName>EDP ES - ESPÍRITO SANTO DISTRIBUIÇÃO DE ENERGIA S.A.</fullName>
            </value>
            <value>
                <fullName>COOPERATIVA DE INFRAESTRUTURA E ELETRIFIÇÃO RURAL DE PALOTINA. - CERPA</fullName>
            </value>
            <value>
                <fullName>EQUATORIAL GO - EQUATORIAL GOIÁS DISTRIBUIDORA DE ENERGIA S.A.</fullName>
            </value>
            <value>
                <fullName>CELG D - DISTRIBUIÇÃO S.A.</fullName>
            </value>
            <value>
                <fullName>CEMAR - COMPANHIA ENERGÉTICA DO MARANHÃO</fullName>
            </value>
            <value>
                <fullName>EQUATORIAL MA - EQUATORIAL MARANHÃO DISTRIBUIDORA DE ENERGIA S.A.</fullName>
            </value>
            <value>
                <fullName>CEMIG D - CEMIG DISTRIBUIÇÃO S.A</fullName>
            </value>
            <value>
                <fullName>ENERGISA MG - DISTRIBUIDORA DE ENERGIA S.A.</fullName>
            </value>
            <value>
                <fullName>ENERGISA MS - DISTRIBUIDORA DE ENERGIA S.A.</fullName>
            </value>
            <value>
                <fullName>ELEKTRO MS - ELEKTRO REDES S.A.</fullName>
            </value>
            <value>
                <fullName>ENERGISA MT - DISTRIBUIDORA DE ENERGIA S.A.</fullName>
            </value>
            <value>
                <fullName>EQUATORIAL PARÁ - DISTRIBUIDORA DE ENERGIA S.A.</fullName>
            </value>
            <value>
                <fullName>NEOENERGIA PB - NEOENERGIA PB</fullName>
            </value>
            <value>
                <fullName>ENERGISA PB - DISTRIBUIDORA DE ENERGIA S.A</fullName>
            </value>
            <value>
                <fullName>NEOENERGIA PE - NEOENERGIA PE</fullName>
            </value>
            <value>
                <fullName>CELPE PERNAMBUCO - COMPANHIA ENERGÉTICA DE PERNAMBUCO</fullName>
            </value>
            <value>
                <fullName>EQUATORIAL PIAUÍ - DISTRIBUIDORA DE ENERGIA S.A</fullName>
            </value>
            <value>
                <fullName>COCEL ENERGIA - COMPANHIA CAMPOLARGUENSE DE ENERGIA</fullName>
            </value>
            <value>
                <fullName>COPEL PR - DISTRIBUIÇÃO S.A.</fullName>
            </value>
            <value>
                <fullName>ENEL RJ - AMPLA ENERGIA E SERVIÇOS S.A.</fullName>
            </value>
            <value>
                <fullName>LIGHT RJ - LIGHT SERVIÇOS DE ELETRICIDADE S A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>