force-app/main/default/objects/TabelaEzeeConnect__c/fields/DescontoFixoPar1__c.field-meta.xml
<CustomField>
    <fullName>DescontoFixoPar1__c</fullName>
    <label>Desconto Fixo 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>