force-app/main/default/objects/TabelaEzeeConnect__c/fields/DescontoFixoPar2__c.field-meta.xml
<CustomField>
    <fullName>DescontoFixoPar2__c</fullName>
    <label>Desconto Fixo 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>