force-app/main/default/objects/TabelaEzeeConnect__c/fields/DescontoFixoPar3__c.field-meta.xml
<CustomField>
    <fullName>DescontoFixoPar3__c</fullName>
    <label>Desconto Fixo 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>