force-app/main/default/objects/TabelaEzeeConnect__c/fields/DescontoPromocionalPar1__c.field-meta.xml
<CustomField>
    <fullName>DescontoPromocionalPar1__c</fullName>
    <label>Desconto Promocional 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>