force-app/main/default/objects/TabelaEzeeConnect__c/fields/DescontoPromocionalPar2__c.field-meta.xml
<CustomField>
    <fullName>DescontoPromocionalPar2__c</fullName>
    <label>Desconto Promocional 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>