force-app/main/default/objects/TabelaEzeeConnect__c/fields/DescontoPromocionalPar3__c.field-meta.xml
<CustomField>
    <fullName>DescontoPromocionalPar3__c</fullName>
    <label>Desconto Promocional 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>