force-app/main/default/objects/TabelaEzeeConnect__c/fields/Parceiro01__c.field-meta.xml
<CustomField>
    <fullName>Parceiro01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parceiro1</label>
    <referenceTo>Parceiro__c</referenceTo>
    <relationshipLabel>Tabelas Ezee Connect</relationshipLabel>
    <relationshipName>Tabelas_Ezee_Connect</relationshipName>
    <type>Lookup</type>
</CustomField>