force-app/main/default/objects/TabelaEzeeConnect__c/fields/Parceiro02__c.field-meta.xml
<CustomField>
    <fullName>Parceiro02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parceiro2</label>
    <referenceTo>Parceiro__c</referenceTo>
    <relationshipLabel>Tabelas Ezee Connect (Parceiro02)</relationshipLabel>
    <relationshipName>Tabelas_Ezee_Connect1</relationshipName>
    <type>Lookup</type>
</CustomField>