force-app/main/default/objects/TabelaEzeeConnect__c/fields/Parceiro03__c.field-meta.xml
<CustomField>
    <fullName>Parceiro03__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parceiro3</label>
    <referenceTo>Parceiro__c</referenceTo>
    <relationshipLabel>Tabelas Ezee Connect (Parceiro03)</relationshipLabel>
    <relationshipName>Tabelas_Ezee_Connect2</relationshipName>
    <type>Lookup</type>
</CustomField>