force-app/main/default/objects/TabelaEzeeConnect__c/fields/PrazoContratoPar2__c.field-meta.xml
<CustomField>
    <fullName>PrazoContratoPar2__c</fullName>
    <inlineHelpText>Prazo de contrato utilizado na proposta</inlineHelpText>
    <label>Prazo de Contrato 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>