force-app/main/default/objects/TabelaEzeeConnect__c/fields/Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tarifa__c</fullName>
    <label>Tarifa</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>