force-app/main/default/objects/TabelaEzeeConnect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Parceiro01__c</columns>
    <columns>ConcessionariaEnergia__c</columns>
    <columns>Distribuidora__c</columns>
    <columns>Estado__c</columns>
    <columns>DescontoFixoPar1__c</columns>
    <columns>DescontoPromocionalPar1__c</columns>
    <columns>PrazoContratoPar1__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>