force-app/main/default/objects/TabelaEzeeConnect__c/listViews/Concessionarias.listView-meta.xml
<ListView>
    <fullName>Concessionarias</fullName>
    <columns>NAME</columns>
    <columns>ConcessionariaEnergia__c</columns>
    <columns>Distribuidora__c</columns>
    <columns>Estado__c</columns>
    <columns>Tarifa__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Concessionárias</label>
</ListView>